# EPA

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  api.ts  main.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_conversations.sql  003_idea_conversations.sql
src-tauri/src/: agent.rs  db.rs  lib.rs  llm.rs  main.rs  models.rs  prompt.rs  secrets.rs
src/components/: AgentSegments.tsx  AgentWorkspace.tsx  ChatBox.tsx  ConfirmDialog.tsx  EmptyState.tsx  HomeView.tsx  IdeaPreviewCard.tsx  MarkdownEditor.tsx  MarkdownPreview.tsx  MarkdownWysiwyg.tsx  PromptPanel.tsx  Surface.tsx
src/hooks/: useIdeaChildren.ts  useIdeaDraft.ts
src/lib/: agentRun.ts  format.ts  types.ts
src/panels/: RightRail.tsx  SettingsDialog.tsx  Sidebar.tsx
src/tabs/: AgentTab.tsx  DiscussionTab.tsx  ExperimentsTab.tsx  ReportsTab.tsx
