[package]
name = "research-idea-agent"
version = "0.1.0"
description = "Local-first research idea agent workspace"
authors = ["Research Idea Agent Contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "research_idea_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "migrate"] }
tauri = { version = "2.2.0", features = [] }
tauri-plugin-opener = "2.2.0"
tauri-plugin-stronghold = "2.2.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }

[profile.dev.package.scrypt]
opt-level = 3

